<resources>
    <string name="app_name">lab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listOfCurrencies">Список валют</string>
    <string name="apply">применить</string>
    <string name="select">выбрать</string>
    <string name="all">все</string>
    <string name="month">месяц</string>
    <string name="week">неделя</string>
    <string name="exchange">Обменять</string>
</resources>