<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.FilterFragment">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_height="wrap_content"
         android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp">

    <Button
        android:id="@+id/period7Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:textSize="13sp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <Button
        android:id="@+id/period30Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textSize="13sp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@id/period7Button"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <Button
        android:id="@+id/periodAllButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textSize="13sp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@id/period30Button"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <Button
        android:id="@+id/periodCustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="11sp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toEndOf="@id/period30Button"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    </LinearLayout>

    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>